<resources>
    <string name="app_name">Mi CV</string>

    <string name="title_section_me">Tech Women</string>
    <string name="title_section_experience">Experiencia</string>
    <string name="title_section_education">Educacion</string>
    <string name="title_section_skills">Aptitudes</string>
    <string name="title_section_languages">Idiomas</string>
    <string name="title_section_certifications">Certificaciones</string>


    <string name="section_me_description">Chocolate croissant ice cream dessert donut marzipan lollipop. Cookie chupa chups sesame snaps cotton candy croissant macaroon fruitcake tart brownie. Muffin sweet roll pudding sugar plum chocolate bar fruitcake.</string>
    <string name="section_me_desc_linkedin">Linkedin Profile</string>
    <string name="section_me_desc_github">Github Profile</string>
    <string name="section_me_desc_phone">Phone number</string>
    <string name="section_me_linkedin_profile">company/techwomenc</string>
    <string name="section_me_linkedin_profile_url">https://www.linkedin.com/company/techwomenc</string>
    <string name="section_me_github_profile">techWomenCommunity</string>
    <string name="section_me_github_profile_url">https://github.com/techWomenCommunity</string>
    <string name="section_me_email">info@techwomen.org.mx</string>
    <string name="section_me_phone">00-00-00-00-00</string>


    <string name="section_experience_job_title">PUESTO</string>
    <string name="section_experience_company">EMPRESA</string>
    <string name="section_experience_date_1">Enero 2015 - Presente</string>
    <string name="section_experience_date_2">Marzo 2013 - Diciembre 2014</string>
    <string name="section_experience_job_title_desc_1">Ingeniero de Software</string>
    <string name="section_experience_job_title_desc_2">Desarrollador Web</string>
    <string name="section_experience_company_desc_1">Google</string>
    <string name="section_experience_company_desc_2">Facebook</string>
    <string name="section_experience_description_1">Lollipop muffin lemon drops jelly-o dragée. Cheesecake lollipop ice cream pudding tootsie roll cotton candy lemon drops soufflé caramels. Cupcake bear claw topping lollipop jujubes oat cake carrot cake dragée donut. Topping tiramisu topping.</string>
    <string name="section_experience_description_2">Candy canes fruitcake gummies cake chocolate bar. Croissant muffin pastry carrot cake dessert croissant chocolate marzipan. Caramels topping sesame snaps donut lemon drops. Dessert apple pie candy canes cookie cheesecake marshmallow cookie sugar plum.</string>


    <string name="section_education_university">Universidad del Campus Party</string>
    <string name="section_education_title">GRADO</string>
    <string name="section_education_title_name">Ingenieria en Informatica</string>
    <string name="section_education_generation">GENERACION</string>
    <string name="section_education_generation_name">2011 - 2015</string>


    <string name="section_skills_1">Java</string>
    <string name="section_skills_2">PHP</string>
    <string name="section_skills_3">C#</string>
    <string name="section_skills_4">Android</string>
    <string name="section_skills_5">MySQL</string>
    <string name="section_skills_6">HTML5</string>
    <string name="section_skills_7">Javascript</string>
    <string name="section_skills_8">CSS</string>
    <string name="section_skills_9">Docker</string>
    <string name="section_skills_10">Apache Mesos</string>

    <string name="section_certification_name_1">Oracle Certified Professional Java SE Programmer</string>
    <string name="section_certification_company_1">Oracle</string>
    <string name="section_certification_date_1">Enero 2015 - Actualidad</string>
    <string name="section_certification_name_2">Xamarin Certified Mobile Developer</string>
    <string name="section_certification_company_2">Xamarin</string>
    <string name="section_certification_date_2">Noviembre 2014 - Noviembre 2015</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>







</resources>
