<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/certifications"
            android:background="@drawable/container_dropshadow" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textCertification1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/section_certification_name_1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textCompanyCertification1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_certification_company_1"/>

                    <TextView
                        android:id="@+id/textCertificationDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_certification_date_1" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textCertification2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/section_certification_name_2"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textCompanyCertification2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_certification_company_2"/>

                    <TextView
                        android:id="@+id/textCertificationDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_certification_date_2" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
