<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/education1"
            android:background="@drawable/container_dropshadow" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageEducation"
                        android:layout_gravity="left"
                        android:src="@drawable/education" />

                    <TextView
                        android:id="@+id/textUniversidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/section_education_university" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_education_title"/>

                    <TextView
                        android:id="@+id/textTitleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_education_title_name" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textGeneration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_education_generation"/>

                    <TextView
                        android:id="@+id/textGenerationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_education_generation_name" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
