<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/job1"
            android:background="@drawable/container_dropshadow" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageCalendar"
                        android:layout_gravity="left"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/textDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/section_experience_date_1" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textJobTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_job_title"/>

                    <TextView
                        android:id="@+id/textJobTitleName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_job_title_desc_1" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textCompany1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_company"/>

                    <TextView
                        android:id="@+id/textCompanyName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_company_desc_1" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textJobDescription1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_description_1"/>



                </LinearLayout>

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@+id/job1"
            android:id="@+id/job2"
            android:background="@drawable/container_dropshadow">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageCalendar2"
                        android:layout_gravity="left"
                        android:src="@drawable/calendar" />

                    <TextView
                        android:id="@+id/textDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/section_experience_date_2" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textJobTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_job_title"/>

                    <TextView
                        android:id="@+id/textJobTitleName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_job_title_desc_2" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textCompany2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_company"/>

                    <TextView
                        android:id="@+id/textCompanyName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_company_desc_2" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_gravity="center_horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textJobDescription2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section_experience_description_2"/>



                </LinearLayout>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
